--- a/Frontend/Manager_area/styles-admin.css
+++ b/Frontend/Manager_area/styles-admin.css
@@ -15,7 +15,6 @@ body {
     width: 100%;
     display: flex;
     align-items: center;
-    border-bottom: 2px solid #f1f1f1;
 }
 
 .logo {
@@ -145,55 +144,6 @@ a {
 .sidebar--bottom-items a:hover {
     background-color: #5073fb;
     color: #fff;
-}
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.modal-content {
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-    width: 80%;
-    max-width: 500px;
-    position: relative;
-}
-
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-}
-
-.close-button:hover {
-    color: red;
-}
-
-.btn-submit {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.btn-submit:hover {
-    background-color: #0056b3;
 }
 
 #active--link {
@@ -399,6 +349,11 @@ a {
     color: #fb5050;
 }
 
+.user {
+
+}
+
+/*Estilo del de editar tarea */
 .modal {
     position: fixed;
     top: 50%;
@@ -505,8 +460,9 @@ table {
 }
 
 thead {
-    background-color: #5073fb;
+    background-color: #2F6690;
     color: #fff;
+
 }
 
 thead th {
@@ -542,16 +498,16 @@ button {
 
 /*Estilo de lo botones de agregar tarea y ver tarea */
 .btn-icon1 {
-    background-color: #41a7a9;
+    background-color: #3A7CA5;
 }
 
 .btn-icon2 {
-    background-color: #99d593;
+    background-color: #81C3D7;
 }
 
 /*Estilo de lo botones de editar tarea y eliminar  tarea */
 .btn-icon3 {
-    background-color: #3ea25f;
+    background-color:#3A7CA5;
 }
 
 .btn-icon4 {
