--- a/Frontend/Manager_area/styles-admin.css
+++ b/Frontend/Manager_area/styles-admin.css
@@ -348,11 +348,59 @@ a {
 .busy {
     color: #fb5050;
 }
-
-.user {
-
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Asegúrate de que esté sobre todo */
 }
 
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    width: 90%;
+    position: relative;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.formulario-horizontal .form-group-horizontal {
+    margin-bottom: 15px;
+}
+
+.formulario-horizontal label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.btn-submit {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn-submit:hover {
+    background-color: #45a049;
+}
 /*Estilo del de editar tarea */
 .modal {
     position: fixed;
